added third vector lecture notes

--- a/multivariable/Vectors_Pt._1.html
+++ b/multivariable/Vectors_Pt._1.html
@@ -66,6 +66,7 @@
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 <li><b>Vectors Pt. 1</b></li>
 <li><a href="./Vectors_Pt._2.html" title="Vectors Pt. 2" class="page">Vectors Pt. 2</a></li>
+<li><a href="./Vectors_Pt._3.html" title="Vectors Pt. 3" class="page">Vectors Pt. 3</a></li>
 </ul>
 
 </div>
