--- a/multivariable/Vectors_Pt._2.html
+++ b/multivariable/Vectors_Pt._2.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./Vectors_Pt._3.html'>Next</a> ]
 </div>
 
 <hr />
@@ -66,6 +66,7 @@
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 <li><a href="./Vectors_Pt._1.html" title="Vectors Pt. 1" class="page">Vectors Pt. 1</a></li>
 <li><b>Vectors Pt. 2</b></li>
+<li><a href="./Vectors_Pt._3.html" title="Vectors Pt. 3" class="page">Vectors Pt. 3</a></li>
 </ul>
 
 </div>
