added monday notes

--- a/multivariable/Homework/Homework_2.html
+++ b/multivariable/Homework/Homework_2.html
@@ -70,6 +70,7 @@
 </ul>
 </li>
 <li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="../Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
 <li><a href="../Vectors.html" title="Vectors" class="page">Vectors</a></li>
@@ -86,15 +87,19 @@
 
 	<div class='content'>
 	<p>
-Created Thursday 11 June 2020
+1)
 </p>
-
 
 	</div>
 
 	<br />
 
 	<div class='page-footer'>
+		<b>Backlinks:</b>
+
+		<a href='../Monday_Meetings/3rd.html'>Monday Meetings:3rd</a>
+
+		<br /><br />
 
 	</div>
 
