--- a/multivariable/Introduction.html
+++ b/multivariable/Introduction.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Matrices.html'>Next</a> ]
+	[ <a href='./Lines_and_Planes.html'>Next</a> ]
 </div>
 
 <hr />
@@ -65,6 +65,7 @@
 <li><a href="./Home.html" title="Home" class="page">Home</a></li>
 <li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
 <li><b>Introduction</b></li>
+<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="./Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="./Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
 <li><a href="./Vectors.html" title="Vectors" class="page">Vectors</a></li>
