--- a/multivariable/Matrices/Matrix_Pt._1.html
+++ b/multivariable/Matrices/Matrix_Pt._1.html
@@ -65,6 +65,7 @@
 <li><a href="../Home.html" title="Home" class="page">Home</a></li>
 <li><a href="../Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a>
 <ul>
 <li><a href="./Dot_Cross_Prod.html" title="Dot Cross Prod" class="page">Dot Cross Prod</a></li>
