--- a/multivariable/Monday_Meetings.html
+++ b/multivariable/Monday_Meetings.html
@@ -65,11 +65,13 @@
 <li><a href="./Home.html" title="Home" class="page">Home</a></li>
 <li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="./Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><b>Monday Meetings</b>
 <ul>
 <li><a href="./Monday_Meetings/1st.html" title="1st" class="page">1st</a></li>
 <li><a href="./Monday_Meetings/2nd.html" title="2nd" class="page">2nd</a></li>
+<li><a href="./Monday_Meetings/3rd.html" title="3rd" class="page">3rd</a></li>
 </ul>
 </li>
 <li><a href="./Vectors.html" title="Vectors" class="page">Vectors</a></li>
