--- a/multivariable/Monday_Meetings/2nd.html
+++ b/multivariable/Monday_Meetings/2nd.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='../Vectors.html'>Next</a> ]
+	[ <a href='./3rd.html'>Next</a> ]
 </div>
 
 <hr />
@@ -65,11 +65,13 @@
 <li><a href="../Home.html" title="Home" class="page">Home</a></li>
 <li><a href="../Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="../Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a>
 <ul>
 <li><a href="./1st.html" title="1st" class="page">1st</a></li>
 <li><b>2nd</b></li>
+<li><a href="./3rd.html" title="3rd" class="page">3rd</a></li>
 </ul>
 </li>
 <li><a href="../Vectors.html" title="Vectors" class="page">Vectors</a></li>
