--- a/multivariable/Monday_Meetings/3rd.html
+++ b/multivariable/Monday_Meetings/3rd.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Homework</title>
+	<title>3rd</title>
 	<meta name='Generator' content='Zim 0.68'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -51,29 +51,30 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Home.html'>Prev</a> ]
+	[ <a href='./2nd.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Homework/Homework_1.html'>Next</a> ]
+	[ <a href='../Vectors.html'>Next</a> ]
 </div>
 
 <hr />
 
 <div class="menu">
 <ul>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><b>Homework</b>
+<li><a href="../Home.html" title="Home" class="page">Home</a></li>
+<li><a href="../Homework.html" title="Homework" class="page">Homework</a></li>
+<li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
+<li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a></li>
+<li><a href="../Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a>
 <ul>
-<li><a href="./Homework/Homework_1.html" title="Homework 1" class="page">Homework 1</a></li>
-<li><a href="./Homework/Homework_2.html" title="Homework 2" class="page">Homework 2</a></li>
+<li><a href="./1st.html" title="1st" class="page">1st</a></li>
+<li><a href="./2nd.html" title="2nd" class="page">2nd</a></li>
+<li><b>3rd</b></li>
 </ul>
 </li>
-<li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
-<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
-<li><a href="./Matrices.html" title="Matrices" class="page">Matrices</a></li>
-<li><a href="./Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
-<li><a href="./Vectors.html" title="Vectors" class="page">Vectors</a></li>
+<li><a href="../Vectors.html" title="Vectors" class="page">Vectors</a></li>
 </ul>
 
 </div>
@@ -82,13 +83,168 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Homework <a name='Homework'></a></h1>
+	<h1>3rd <a name='Monday Meetings:3rd'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Collection of homeworks.
+Created Monday 15 June 2020
 </p>
+
+<p>
+Quiz is on Wednesday at 10am under course documents. Send your answers as a PDF at his email.<br>
+He will accept exams up to 10:35am. So we have a 5 minute grace period.
+</p>
+
+<p>
+<a href="mailto:ifarmakis@brooklyn.cuny.edu" title="ifarmakis@brooklyn.cuny.edu" class="mailto">ifarmakis@brooklyn.cuny.edu</a>
+</p>
+
+<p>
+Quiz will include the lines and planes stuff?
+</p>
+
+<p>
+There are no curves.
+</p>
+
+<p>
+Remember, final is 40% and each quiz is 30%.
+</p>
+
+<p>
+Quizes are graded 100% maximum.
+</p>
+
+<p>
+There will be 8-9 questions(?)
+</p>
+
+<h3>Hw Sol</h3>
+
+<br>
+
+<h5>HW2: #9</h5>
+
+<p>
+Someone asked about question 9 of HW 2.
+</p>
+
+<p>
+I understand the idea. If the parallelogram from the determinant has an area of 0, then
+</p>
+
+<p>
+He notes he meant to write -2 instead of just 2.
+</p>
+
+<p>
+He drew the points and had (1, 5, 2) be the origin of the vectors. 
+</p>
+
+<p>
+for <b>a</b> he goes (-1 - 1, -3 - 5, 3 - 2) = (-2, -8, 1)<br>
+<b>b</b> = (-4, -6, 3)
+</p>
+
+<h5>HW2: #7</h5>
+
+<p>
+Just set the matrix to be:<br>
+<img src="./3rd/equation.png">
+</p>
+
+<p>
+Simply multiply that by itself to get A<sup>2</sup>. <br>
+Also, <b>DETERMINATE! </b>The determinate of A<sup>2</sup> must equal the deterinate of the zero matrix.<br>
+Remember, det(AB) = det(A) * det(B)<br>
+Since A<sup>2</sup> = 0<br>
+Then det(A<sup>2</sup>) = (det(A))<sup>2</sup> = det(0) = 0<br>
+So, det(A) = 0.
+</p>
+
+<p>
+The determinate is how we got ad - bc.
+</p>
+
+<h5>HW2: #1</h5>
+
+<p>
+He first finds the inner product of &lt;<b>u</b>, <b>v</b>&gt; = -2 + 1 - 3 = -4.
+</p>
+
+<p>
+Then<br>
+<img src="./3rd/equation001.png"><br>
+-4 = ...
+</p>
+
+<p>
+<b>do this on your own in a moment</b>
+</p>
+
+<h5>HW2: #2</h5>
+
+<p>
+Just do this:<br>
+<img src="./3rd/equation002.png"><br>
+Remember, do the determinate stuff to solve this!
+</p>
+
+<p>
+Now then, we need 2i + λ j to be parallel.<br>
+So then, 2i + λ j = (2, 3, 0)<br>
+As we can see, λ is 3.
+</p>
+
+<h5>HW2: #4</h5>
+
+<p>
+He says it's similar to exercise 9.
+</p>
+
+<p>
+So, we have points (1, 1), (0, 2), and (3, 2).<br>
+So, take one of this points as our origin of sorts. Let's say we'll make it (3, 2).<br>
+Area of parallelogram <img src="./3rd/equation003.png">
+</p>
+
+<p>
+Let the vector from (3, 2) to (1, 1) be vector <b>u</b>. (-2, -1, 0)<br>
+And then vector <b>v</b> is from (3, 2) to (0, 2). (-3, 0, 0).<br>
+Then we just find the determinate and divide by 2. Remember, we end up with a parallelogram.
+</p>
+
+<h5>HW2: #5</h5>
+
+<p>
+He says there is no highschool algebra needed for this. <br>
+Notice how on the right side we have the formula for the length of each vector. On the left, we have the length of each of those three vectors from the right added together.<br>
+Putting this all together, we see that it is equal! I'll put more information on this in <a href="../Homework/Homework_2.html" title="Homework:Homework 2" class="page">Homework:Homework 2</a>.
+</p>
+
+<h3>Additional Notes</h3>
+
+<p>
+He tells us a few extra things he wants us to know.<br>
+dot product is symmetric.<br>
+cross product is <b>anti-symmetric.</b><br>
+In dot product, i<sup>2</sup> = j<sup>2</sup> = k<sup>2</sup>= 1
+</p>
+
+<p>
+It's a little hard to read the paper he showed us. He said he'll put it online later today for us to download. 
+</p>
+
+<h3>For the Quiz</h3>
+
+<p>
+He says to really know the theory or else we'll have trouble. Don't forget about vector space, subspace, etc.
+</p>
+
+<br>
+<br>
+
 
 	</div>
 
@@ -96,6 +252,33 @@ Collection of homeworks.
 
 	<div class='page-footer'>
 
+			<b>Attachments:</b>
+			<table>
+
+			<tr><td><a href='./3rd/equation.png'>equation.png</a></td><td>&nbsp;</td><td>420b</td></tr>
+
+
+			<tr><td><a href='./3rd/equation.tex'>equation.tex</a></td><td>&nbsp;</td><td>44b</td></tr>
+
+
+			<tr><td><a href='./3rd/equation001.png'>equation001.png</a></td><td>&nbsp;</td><td>724b</td></tr>
+
+
+			<tr><td><a href='./3rd/equation001.tex'>equation001.tex</a></td><td>&nbsp;</td><td>67b</td></tr>
+
+
+			<tr><td><a href='./3rd/equation002.png'>equation002.png</a></td><td>&nbsp;</td><td>1.15kb</td></tr>
+
+
+			<tr><td><a href='./3rd/equation002.tex'>equation002.tex</a></td><td>&nbsp;</td><td>79b</td></tr>
+
+
+			<tr><td><a href='./3rd/equation003.png'>equation003.png</a></td><td>&nbsp;</td><td>430b</td></tr>
+
+
+			<tr><td><a href='./3rd/equation003.tex'>equation003.tex</a></td><td>&nbsp;</td><td>48b</td></tr>
+
+			</table>
 	</div>
 
 	
