--- a/multivariable/Homework/Homework_1.html
+++ b/multivariable/Homework/Homework_1.html
@@ -70,6 +70,7 @@
 </ul>
 </li>
 <li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="../Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
 <li><a href="../Vectors.html" title="Vectors" class="page">Vectors</a></li>
