--- a/multivariable/Lines_and_Planes.html
+++ b/multivariable/Lines_and_Planes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Homework</title>
+	<title>Lines and Planes</title>
 	<meta name='Generator' content='Zim 0.68'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -51,11 +51,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Home.html'>Prev</a> ]
+	[ <a href='./Introduction.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Homework/Homework_1.html'>Next</a> ]
+	[ <a href='./Matrices.html'>Next</a> ]
 </div>
 
 <hr />
@@ -63,14 +63,9 @@
 <div class="menu">
 <ul>
 <li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><b>Homework</b>
-<ul>
-<li><a href="./Homework/Homework_1.html" title="Homework 1" class="page">Homework 1</a></li>
-<li><a href="./Homework/Homework_2.html" title="Homework 2" class="page">Homework 2</a></li>
-</ul>
-</li>
+<li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
-<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
+<li><b>Lines and Planes</b></li>
 <li><a href="./Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="./Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
 <li><a href="./Vectors.html" title="Vectors" class="page">Vectors</a></li>
@@ -82,13 +77,14 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Homework <a name='Homework'></a></h1>
+	<h1>Lines and Planes <a name='Lines and Planes'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Collection of homeworks.
+Created Monday 15 June 2020
 </p>
+
 
 	</div>
 
