--- a/multivariable/Matrices.html
+++ b/multivariable/Matrices.html
@@ -51,7 +51,7 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Introduction.html'>Prev</a> ]
+	[ <a href='./Lines_and_Planes.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
@@ -65,6 +65,7 @@
 <li><a href="./Home.html" title="Home" class="page">Home</a></li>
 <li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><b>Matrices</b>
 <ul>
 <li><a href="./Matrices/Dot_Cross_Prod.html" title="Dot Cross Prod" class="page">Dot Cross Prod</a></li>
