--- a/multivariable/Monday_Meetings/1st.html
+++ b/multivariable/Monday_Meetings/1st.html
@@ -65,11 +65,13 @@
 <li><a href="../Home.html" title="Home" class="page">Home</a></li>
 <li><a href="../Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="../Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a>
 <ul>
 <li><b>1st</b></li>
 <li><a href="./2nd.html" title="2nd" class="page">2nd</a></li>
+<li><a href="./3rd.html" title="3rd" class="page">3rd</a></li>
 </ul>
 </li>
 <li><a href="../Vectors.html" title="Vectors" class="page">Vectors</a></li>
