--- a/multivariable/Vectors.html
+++ b/multivariable/Vectors.html
@@ -51,7 +51,7 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Monday_Meetings/2nd.html'>Prev</a> ]
+	[ <a href='./Monday_Meetings/3rd.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
@@ -65,6 +65,7 @@
 <li><a href="./Home.html" title="Home" class="page">Home</a></li>
 <li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
 <li><a href="./Matrices.html" title="Matrices" class="page">Matrices</a></li>
 <li><a href="./Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
 <li><b>Vectors</b>
