exported new notes

--- a/multivariable/Homework/Homework_2.html
+++ b/multivariable/Homework/Homework_2.html
@@ -99,12 +99,12 @@ This of course confused the hell out of me. I wasn't quite sure how this formula
 
 <p>
 So then, we end up with this:<br>
-<img src="./Homework_2/equation002.png"> = projection of <b>v</b> onto <b>u</b>
+<img src="./Homework_2/equation002.png"> = projection of <b>v</b> onto <b>u </b>
 </p>
 
 <p>
 Now we can crunch the numbers like so:<br>
-Let <b>v</b> = (2, 1, -3) and <b>u</b> = (-1, 1, 1)
+Let <b>v</b> = (2, 1, -3) and <b>u</b> = (-1, 1, 1) 
 </p>
 
 <p>
@@ -350,6 +350,10 @@ My initial thought was perhaps we need the dot (inner) product. However, we shou
 <img src="./Homework_2/equation026.png">
 </p>
 
+<p>
+<img src="../images/hw-2-q8-1.png">
+</p>
+
 <h5>b)</h5>
 
 <p>
@@ -434,7 +438,7 @@ Make a 45 degree angle?
 			<tr><td><a href='./Homework_2/equation008.tex'>equation008.tex</a></td><td>&nbsp;</td><td>28b</td></tr>
 
 
-			<tr><td><a href='./Homework_2/equation009.png'>equation009.png</a></td><td>&nbsp;</td><td>3.18kb</td></tr>
+			<tr><td><a href='./Homework_2/equation009.png'>equation009.png</a></td><td>&nbsp;</td><td>3.22kb</td></tr>
 
 
 			<tr><td><a href='./Homework_2/equation009.tex'>equation009.tex</a></td><td>&nbsp;</td><td>382b</td></tr>
