--- a/multivariable/Vectors/Vectors_Pt._1.html
+++ b/multivariable/Vectors/Vectors_Pt._1.html
@@ -117,7 +117,7 @@ Vector <img src="./Vectors_Pt._1/equation002.png"> is the <b>sum</b> of vectors 
 </p>
 
 <p>
-<img src="./images/vector-addition.png">
+<img src="../images/vector-addition.png">
 </p>
 
 <h3>Vector Multiplication by a Scalar</h3>
