added 4th monday meeting

--- a/multivariable/Monday_Meetings/4th.html
+++ b/multivariable/Monday_Meetings/4th.html
@@ -95,6 +95,32 @@
 Created Monday 22 June 2020
 </p>
 
+<p>
+He starts by asking if we can see what he's writing.
+</p>
+
+<p>
+He starts by answering a question from one of the other students. If I have some time, I'll type out his explanation later,
+</p>
+
+<h3>Quiz 1</h3>
+
+<p>
+Next, he's solving some questions from the quiz. I haven't spent much time analyzing the quiz yet so I will be filling out this portion after blackboard puts the recording of the lecture online.
+</p>
+
+<h3>Quiz 2</h3>
+
+<p>
+He notes that our last class is July 2nd which is a Thursday. Someone asked if we could have 2 hours but he said no. <br>
+It will likely be the last Thursday we have class. So, the 2nd of July.
+</p>
+
+<h3>Final</h3>
+
+<p>
+We'll have 3 times or so the number of questions than we had in the quizzes. Just expect it to be longer.
+</p>
 
 	</div>
 
