finished partial derivative notes

--- a/multivariable/Homework.html
+++ b/multivariable/Homework.html
@@ -62,6 +62,7 @@
 
 <div class="menu">
 <ul>
+<li><a href="./Derivatives.html" title="Derivatives" class="page">Derivatives</a></li>
 <li><a href="./Home.html" title="Home" class="page">Home</a></li>
 <li><b>Homework</b>
 <ul>
