--- a/multivariable/Home.html
+++ b/multivariable/Home.html
@@ -51,7 +51,7 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./Derivatives/Partial_Derivatives_-_Gradient.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
@@ -62,6 +62,7 @@
 
 <div class="menu">
 <ul>
+<li><a href="./Derivatives.html" title="Derivatives" class="page">Derivatives</a></li>
 <li><b>Home</b></li>
 <li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
