--- a/multivariable/Homework/Homework_1.html
+++ b/multivariable/Homework/Homework_1.html
@@ -62,6 +62,7 @@
 
 <div class="menu">
 <ul>
+<li><a href="../Derivatives.html" title="Derivatives" class="page">Derivatives</a></li>
 <li><a href="../Home.html" title="Home" class="page">Home</a></li>
 <li><a href="../Homework.html" title="Homework" class="page">Homework</a>
 <ul>
